{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 3,
  "lineage": "3634af46-f6da-555b-ed34-4f3c6086dc54",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eastus",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725210193:security-group/sg-0ad164a15e983da7b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ad164a15e983da7b",
            "ingress": [],
            "name": "dev-sg-1",
            "name_prefix": "",
            "owner_id": "851725210193",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bd110cec2b5a008a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725210193:security-group/sg-00e258904c00670be",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00e258904c00670be",
            "ingress": [],
            "name": "prod-sg-2",
            "name_prefix": "",
            "owner_id": "851725210193",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078460c8ae7db4851"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}